--- a/test/network_params.yaml
+++ b/test/network_params.yaml
@@ -61,3 +61,8 @@ mev_params:
   # Optional parameters to send to the custom_flood script that sends reliable payloads
   custom_flood_params:
     interval_between_transactions: 1
+  # PROF specifics
+  prof_sequencer_image: prof-project/prof-sequencer
+  prof_sequencer_seconds_per_bundle: 1
+  prof_sequencer_extra_args: []
+  #
