--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,8 +1,8 @@
 name: Nightly test Workflow
 
 on:
-  schedule:
-    - cron: "0 2 * * *" # This schedules the workflow to run at 02:00 UTC every day
+#  schedule:
+#    - cron: "0 2 * * *" # This schedules the workflow to run at 02:00 UTC every day
   workflow_dispatch:
 
 jobs:
