--- a/network_params.yaml
+++ b/network_params.yaml
@@ -76,6 +76,7 @@ mev_type: full
 mev_params:
   # mev_relay_image: flashbots/mev-boost-relay
   mev_relay_image: prof-project/prof-relay
+  mev_builder_image: prof-project/prof-builder
   mev_relay_api_extra_args: []
   mev_relay_housekeeper_extra_args: []
   mev_relay_website_extra_args: []
